--- a/site/pages/our-work/slices/shared/text/styles.css
+++ b/site/pages/our-work/slices/shared/text/styles.css
@@ -2,6 +2,7 @@
 
 .leftCol {
   margin-top: 30px;
+  z-index: 1;
 }
 
 .rightCol {
@@ -16,7 +17,7 @@
 @media mediumScreen {
   .leftCol {
     margin-top: 0;
-    padding: 0 90px 0 0;
+    padding: 0 60px 0 0;
     flex-basis: 50%;
     width: 50%;
   }
@@ -28,6 +29,6 @@
   }
 
   .rightCol {
-    padding: 0 0 0 90px;
+    padding: 0 0 0 60px;
   }
 }
